--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,8 +52,8 @@ chromadb==1.1.0
 weaviate-client==4.17.0
 opensearch-py==2.8.0
 
-transformers
-sentence-transformers==5.1.1
+transformers==4.57.3
+sentence-transformers==5.1.2
 accelerate
 pyarrow==20.0.0 # fix: pin pyarrow version to 20 for rpi compatibility #15897
 einops==0.8.1 
