Update .gitignore to exclude personal/sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -315,17 +315,25 @@ dist
 cypress/videos
 cypress/screenshots
 .vscode/settings.json
-
-system-report.md
-
-# Ignore private_server directory and all its contents
-private_server/
-config/mcpo_config.json
-PERSISTENT-DOCKER-SETUP.md
-
-
+# --- Personal / Custom Ignored Files ---
+.supabase.env
+CHANGELOG.he.md
+CHANGELOG_Hebrew.md
 Docker_Usage.md
-
+Dockerfile.jupyter
+Dockerfile.libretranslate
+Dockerfile.local
+Dockerfile.mcpo
+N8N-ai-Stack-Backup.json
+PERSISTENT-DOCKER-SETUP.md
+Postgres-ai-Stack-Backup.json
+Redis-Dashboard-Backup.json
+Redis-Simple-Backup.json
+Redis-ai-Stack-Backup.json
+ai-stack-recommendations.md
+backup-config.json
+config/
+db-dumps-backup.json
 docker-compose-fixed.yaml
 docker-compose-ilan-full.yaml
 docker-compose-ilan-git-contain-localai.yaml
@@ -333,56 +341,34 @@ docker-compose-ilan-git-contain.yaml
 docker-compose-ilan-git.yaml
 docker-compose-ilan-stack-backup.yaml
 docker-compose-ilan-stack-with-supabase.yaml.bak
+docker-compose-ilan-stack.yaml
 docker-compose-ilan.yaml
 docker-compose-n8n-custom.yaml
 docker-compose-supabase-debug.yaml
-
 docker-mcp-wrapper.sh
-
-ai-stack-recommendations.md
-ai-stack-recommendations.md
-CHANGELOG_Hebrew.md
-CHANGELOG.he.md
-
-docker-compose-fixed.yaml
-Dockerfile.jupyter
-Dockerfile.libretranslate
-Dockerfile.local
-Dockerfile.mcpo
-
-new_theme_adding.md
-supabase_original_docker_compose.yml
-
-tunnel_url.txt
-ultimate_openwebui_heb.md
-ultimate_stack.md
-
-.claude
-supabase_logs
-
-models
-
-system-overview.py
 errors-systemoverview.txt
-
-# --- Personal / Custom Ignored Files ---
-.supabase.env
-*Backup.json
-backup-config.json
-docker-compose-ilan-stack.yaml
 litellm-config.yaml
 localai.env
 memories.json
+models/
 n8n_backup/
 neo4j_data/
+new_theme_adding.md
 nginx-proxy-conf/
 open-webui-backup.json
 pgadmin-config/
+private_server/
 searxng.env
 supabase.env
-private_server/
-models/
-data/
-*backup.json
+supabase_original_docker_compose.yml
+system-overview.py
+system-report.md
+tunnel_url.txt
+ultimate_openwebui_heb.md
+ultimate_stack.md
 ~/
-config/gcp-oauth.keys.json
+.claude
+supabase_logs
+*Backup.json
+*backup.json
+
